--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,10 @@
+# docker-compose.yaml
 services:
   postgres_db:
-    image: postgres:15-alpine
     container_name: postgres_db
+    build:
+      context: . # El contexto es la raíz del proyecto
+      dockerfile: ./docker/postgres/Dockerfile
     env_file:
       - .env
     ports:
@@ -10,22 +13,24 @@ services:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
-      interval: 30s
-      timeout: 10s
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      interval: 10s
+      timeout: 5s
       retries: 5
+
   scraper:
     container_name: scraper
     build:
-      context: ./scraper
+      context: .
+      dockerfile: ./docker/scraper/Dockerfile.dev
     env_file:
       - .env
     volumes:
-      - ./scraper:/usr/src/app
+      - ./src/scraper:/usr/src/app # Montamos el código del scraper para desarrollo
     depends_on:
       postgres_db:
         condition: service_healthy
     restart: unless-stopped
-    command: "python main.py"  # Reemplaza por el comando real
+
 volumes:
   postgres_data:
