refactor: Restructure project architecture and fix Alembic integration
🏗️ Major architectural changes:
- Moved scraper code from src/scraper/ to scraper/ (root level)
- Extracted database models and migrations to dedicated database/ folder
- Reorganized project structure for better separation of concerns

🗄️ Database & Migration improvements:
- Set up proper Alembic configuration with working migrations
- Created database/models/ with SQLAlchemy models for Store, Category, Manufacturer, Product
- Added database/session.py for centralized DB connection management
- Configured Alembic env.py to use environment variables for DB connection
- Added missing __init__.py files to make Python packages discoverable

🐳 Docker & Infrastructure updates:
- Updated docker-compose.yaml to mount both scraper/ and database/ directories
- Fixed Dockerfile paths to use new scraper/ location instead of src/scraper/
- Added database volume mount to make models accessible from scraper container
- Updated environment variables (POSTGRES_HOST, POSTGRES_PORT) in .env

🕷️ Scraper pipeline fixes:
- Fixed import issues in pipelines.py by adding proper sys.path configuration
- Updated pipeline to import database models from new structure
- Modified SQLAlchemyPipeline to use engine from database.session directly
- Ensured scraper can successfully connect to PostgreSQL and save scraped data

🛠️ Management script enhancements:
- Added makemigrations command to generate new database migrations
- Added migrate command to apply pending migrations to database
- Enhanced help documentation with new database-related commands

✅ Verification:
- All migration commands working properly (makemigrations/migrate)
- Scraper successfully extracts data from Edeka24 and stores in PostgreSQL
- End-to-end workflow functional: start → migrate → scrape → data stored
- Cleaned up duplicate/obsolete files and directories

This refactor establishes a clean, maintainable project structure with proper separation between sc

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,8 @@ services:
     env_file:
       - .env
     volumes:
-      - ./src/scraper:/usr/src/app # Montamos el código del scraper para desarrollo
+      - ./scraper:/usr/src/app # Montamos el código del scraper para desarrollo
+      - ./database:/usr/src/app/database # Montamos la carpeta database para Alembic
     depends_on:
       postgres_db:
         condition: service_healthy
