--- a/docker/scraper/Dockerfile.prod
+++ b/docker/scraper/Dockerfile.prod
@@ -4,11 +4,11 @@ FROM python:3.11-slim
 WORKDIR /usr/src/app
 
 # Copiamos solo los requisitos primero para aprovechar el cache de Docker
-COPY ./src/scraper/requirements.txt .
+COPY ./scraper/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Ahora copiamos todo el proyecto del scraper
-COPY ./src/scraper/ .
+COPY ./scraper/ .
 
 # El comando por defecto en producción sería ejecutar el scraper directamente
 # o a través de un programador de tareas.
