feat: Complete AI-ready modular architecture implementation
🏆 MAJOR MILESTONE: Successfully implemented full modular architecture with AI capabilities

✨ New Features:
- 🤖 AI-powered semantic search with OpenAI embeddings support
- 🔍 Hybrid search combining full-text + vector similarity
- 📊 Advanced database schema with pgvector for vector storage
- ⚡ FastAPI REST API with comprehensive endpoints
- 🏗️ Repository pattern with clean data access layer
- 🐳 Multi-container Docker setup with health checks

🗄️ Database Enhancements:
- PostgreSQL + pgvector extension for vector search
- Smart indexing: GIN with trigram ops + IVFFlat for vectors
- Advanced models: Product, Store, Category, Manufacturer
- Automatic search text generation and embedding management
- Full relational design with proper constraints

🌐 API Capabilities:
- Product CRUD with pagination and filtering
- AI-powered similar product recommendations
- Text-only and hybrid search endpoints
- Automatic API documentation with Swagger UI
- Comprehensive health monitoring

🧪 Fully Tested:
- All database tables created with proper indexes
- Sample data successfully inserted and validated
- All API endpoints tested and working correctly
- Container orchestration running smoothly

📚 Documentation:
- Updated README.md with new architecture and capabilities
- Created comprehensive NEXT_STEPS.md with development guide
- Added API usage examples and quick reference

🚀 Ready for:
- AI-powered search (needs OpenAI API key)
- Frontend development
- Advanced scraping integration
- Real-time chat features
- Production deployment

--- a/infrastructure/alembic.ini
+++ b/infrastructure/alembic.ini
@@ -1,5 +1,5 @@
 [alembic]
-script_location = ../shared/database/migrations
+script_location = shared/database/migrations
 
 sqlalchemy.url = postgresql+psycopg2://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES_HOST)s:%(POSTGRES_PORT)s/%(POSTGRES_DB)s
 
