feat: Complete functional Edeka24 spider with XML sitemap autodiscovery
🕷️ FULLY FUNCTIONAL EDEKA24 SPIDER IMPLEMENTATION

✨ Major Features Implemented:
- 🗺️ Sitemap Autodiscovery: Automatically detects all product sitemaps from main sitemap
- 🏷️ XML Namespace Handling: Proper XPath with local-name() for namespace compatibility
- 📊 Complete Data Extraction: Name, price, category, SKU, images, stock, manufacturer
- 🏗️ Clean Architecture: Reusable BaseSpider foundation, removed legacy code
- ⚙️ Development Limits: Built-in safety limits for testing (50 items, 100 pages, 5 min)

🔧 Spider Implementation:
- ModernScraper architecture with base spider class
- Intelligent product URL discovery from XML sitemaps
- Robust price parsing for German format (EUR)
- Multi-selector CSS extraction with fallbacks
- Comprehensive error handling and logging
- Development-safe configuration management

📊 Data Successfully Extracted:
- Product names: "EDEKA Naturals Dog..." format
- Prices with currency: 1.29 EUR, 4.99 EUR, etc.
- Complete product URLs for all items
- Category paths from breadcrumb navigation
- SKUs from data attributes and JavaScript
- Stock availability and delivery information

🧹 Project Cleanup:
- Removed legacy edeka_scraper module completely
- Deleted HTML examples and debug files
- Updated documentation (README.md, new ROADMAP.md)
- Clean project structure ready for pipelines

⚡ Ready for Next Phase:
- ✅ Spider foundation complete and tested
- ⏳ Database integration pipelines implementation
- ⏳ Repository pattern integration
- ⏳ End-to-end testing with real data

This establishes the complete spider foundation for automated product extraction from Edeka24, providing robust data collection capabilities ready for integration with the existing modular architecture.

--- a/services/scraper/scrapy.cfg
+++ b/services/scraper/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = edeka_scraper.settings
+default = modern_scraper.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = edeka_scraper
+project = modern_scraper
