--- a/infrastructure/docker-compose.prod.yml
+++ b/infrastructure/docker-compose.prod.yml
@@ -7,6 +7,9 @@ services:
       context: ..
       dockerfile: ./infrastructure/docker/postgres.prod.Dockerfile
     environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_HOST_AUTH_METHOD=md5
     ports:
       - "5432:5432"
